--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -718,40 +718,55 @@ section.lazy-placeholder:after {
 .cid-rXix42FfLU .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rXizV49xrI {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
+.cid-rXiMscnRo8 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
 }
-.cid-rXizV49xrI .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
+.cid-rXiMscnRo8 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
 }
-.cid-rXizV49xrI .mbr-content-text {
-  color: #767676;
-}
-.cid-rXizV49xrI .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-rXizV49xrI .cards-container {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
+.cid-rXiMscnRo8 .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
   justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-rXiMscnRo8 .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-rXiMscnRo8 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
   word-break: break-word;
 }
-@media (max-width: 767px) {
-  .cid-rXizV49xrI .card:not(.last-child) {
-    padding-bottom: 1.5rem;
+.cid-rXiMscnRo8 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-rXiMscnRo8 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-rXiMscnRo8 .img-item {
+    width: 100% !important;
+  }
+  .cid-rXiMscnRo8 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
   }
 }
-.cid-rXizV49xrI .img-text {
-  color: #c1c1c1;
+.cid-rXiMscnRo8 P {
+  color: #767676;
 }
 .cid-rXiwYF4mN5 {
   padding-top: 60px;
